# ch340g-user

./: .gitignore  CMakeLists.txt  Makefile  README.md  ch340.cpp  ch340.h  ch340g-olg.pyx  ch340g.cpp  ch340g.h  ch340g.pxd  ch340g.pyx  install.py  pyproject.toml
.github/workflows/: ci.yml
etc/: Dockerfile  Dockerfile.arm64  Dockerfile.x86
tests/: CMakeLists.txt  test_ch340.cpp  test_ch340g.cpp
